objects/Prospect_Message__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Prospect Account to which this message applies.</description>
        <inlineHelpText>Prospect Account to which this message applies.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect Messages</relationshipLabel>
        <relationshipName>Prospect_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Allocated_Date__c</fullName>
        <description>Date on which this record was last allocated from the recycle bin.</description>
        <inlineHelpText>Date on which this record was last allocated from the recycle bin.</inlineHelpText>
        <label>Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_Complete__c</fullName>
        <description>NP - Not Processed
IP - In Process
P - Processed</description>
        <label>Message Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NP</fullName>
                    <default>true</default>
                    <label>NP</label>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>Account__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Republish__c</fullName>
        <description>When field is populated it triggers workflow to send the corresponding outbound message.</description>
        <inlineHelpText>When field is populated it triggers workflow to send the corresponding outbound message.</inlineHelpText>
        <label>Republish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Flag__c</fullName>
        <formula>if(Account__r.Split_Record__c==true,&quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Indicator__c</fullName>
        <description>Identifies that the prospect wsdl needs to be called</description>
        <inlineHelpText>Work Indicator</inlineHelpText>
        <label>Work Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bin__c</fullName>
        <description>Bin number used for record recycling.</description>
        <inlineHelpText>Bin number used for record recycling.</inlineHelpText>
        <label>bin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Prospect Message</label>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>RecordType__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Allocated_Date__c</columns>
        <columns>bin__c</columns>
        <columns>Message_Complete__c</columns>
        <columns>Republish__c</columns>
        <columns>Work_Indicator__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Message_Complete__c</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RecordType__c</field>
            <operation>contains</operation>
            <value>Account.Customer_OfficeMax</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Prospect Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospect Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>